revision: image and video page

--- a/pages/working-with-images.mdx
+++ b/pages/working-with-images.mdx
@@ -3,7 +3,7 @@ import { Tabs } from "nextra/components"
 
 # Working with images
 
-Use Unbody's Image API powered by Imgix to efficiently fetch, transform and analyze images. Capabilities include dynamic resizing, format conversion, advanced cropping, and intelligent image analysis.
+Use Unbody's Image API powered by [Imgix](https://www.imgix.com/) to efficiently fetch, transform and analyze images. Capabilities include dynamic resizing, format conversion, advanced cropping, and intelligent image analysis.
 
 ## Basic Image Query
 The code fetches image information including OCR text extraction and AI-generated captions, limiting results to 5 entries.
@@ -66,7 +66,7 @@ The code fetches image information including OCR text extraction and AI-generate
 ```
 
 ## Similar Image Search
-Find similar images by providing a reference image URL.
+Find similar images by providing a reference image URL. Learn more about [Visual similarity](/content-api/search/visual-similarity)
 
 <Tabs items={['Unbody SDK', 'GraphQL']}>
   <Tabs.Tab>
