--- a/pages/working-with-videos.mdx
+++ b/pages/working-with-videos.mdx
@@ -2,7 +2,7 @@ import { Tabs } from "nextra/components"
 
 # Working with videos
 
-Use Unbody's Video API powered by Mux to work with video content, including streaming, thumbnails, transcriptions, and analysis.
+Use Unbody's Video API powered by [Mux](https://www.mux.com) to work with video content, including streaming, thumbnails, transcriptions, and analysis.
 
 ## Fetch Video Assets
 Retrieve video thumbnails and animated preview images with size filtering to optimize loading times.
