--- a/pages/prompting/use-the-image-inside-a-prompt.mdx
+++ b/pages/prompting/use-the-image-inside-a-prompt.mdx
@@ -49,4 +49,4 @@ Use images as input to generate descriptions or analyze visual content by provid
 }
 ```
 
-Learn more about advanced role-based prompting in our [JSON Generation API Guide](/generative-api/json-gen).
+Learn more in our [Message-Based Input with Schema Guide](generative-api/json-gen#message-based-input-with-schema).
