fix: samples style

--- a/pages/architecture.mdx
+++ b/pages/architecture.mdx
@@ -44,7 +44,7 @@ For advanced use cases, developers can define custom pipelines tailored to their
 
 ### Data Vectorization
 
-Vectorization converts enriched data into embeddings, enabling semantic tasks like [search](/graphql-api/search/semantic-search) and clustering:
+Vectorization converts enriched data into embeddings, enabling semantic tasks like [search](/content-api/search/semantic-search) and clustering:
 
 - **Prebuilt Models:** Includes transformer-based encoders such as OpenAI embeddings.
 - **Custom Models:** Developers can plug in fine-tuned encoders tailored for specific applications, such as biomedical research or legal text analysis.
@@ -68,7 +68,7 @@ The **Content API** is the primary interface for interacting with enriched and A
 
 The Content API enables:
 
-- **Traditional Database Functions:** Apply filtering with [where](/graphql-api/filters) clauses, grouping data by metadata, and [sort](/graphql-api/sorting) results for structured queries.
+- **Traditional Database Functions:** Apply filtering with [where](/content-api/filters) clauses, grouping data by metadata, and [sort](/content-api/sorting) results for structured queries.
 - **Semantic Queries:** Perform advanced searches using vector similarity or contextual relevance for AI-native workflows.
 - **Generative Capabilities:** Generate text, metadata, or augmented content, enabling tasks like [question answering](#question-answering), summarization, and more.
 
