--- a/pages/content-api/overview.mdx
+++ b/pages/content-api/overview.mdx
@@ -2,7 +2,7 @@ import { Cards } from 'nextra/components'
 
 # Content API Overview
 
-The **Content API** lets you interact with enriched, AI-ready data in Unbody. Built on **Weaviate**, it extends core capabilities with additional data types and functionalities, allowing you to build intelligent, semantic applications with ease.
+The **Content API** lets you interact with enriched, AI-ready data in Unbody. Built on [**Weaviate**](https://weaviate.io/), it extends core capabilities with additional data types and functionalities, allowing you to build intelligent, semantic applications with ease.
 
 ## What Can You Do with the Content API?
 
