--- a/pages/content-api/search/record-similarity.mdx
+++ b/pages/content-api/search/record-similarity.mdx
@@ -1,6 +1,7 @@
 import {Tab, Tabs} from "@nextui-org/react";
 
-Record Similarity is a way to see how alike objects are. You can use this to find objects that look like a specific one. For instance, if you have many Google Docs, you can use this to find docs that are like Doc A. In the past, you had to look at things like keywords or topics to find similar items. But with similarity search in Unbody, this isn't necessary. You can compare the whole document.
+# Record Similarity
+Record similarity is a way to see how alike objects are. You can use this to find objects that look like a specific one. For instance, if you have many Google Docs, you can use this to find docs that are like Doc A. In the past, you had to look at things like keywords or topics to find similar items. But with similarity search in Unbody, this isn't necessary. You can compare the whole document.
 
 ## Syntax
 
@@ -8,9 +9,13 @@ Similarity search can be performed on any object. Here's how:
 
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
-        await unbody.get.<object_name>.similar.record(objectId, {...options}).exec();
+        await unbody.get
+                    .<object_name>
+                    .similar
+                    .record(objectId, {...options})
+                    .exec();
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -33,16 +38,20 @@ Similarity search can be performed on any object. Here's how:
 </Tabs>
 
 
-## Examples
+## Usage
 
-### Example 1 - Google Drive / Google Docs
+### Example 1 - Google Docs
 
 Find Google Docs that are similar to a specific Google Doc.
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
-        await unbody.get.googleDoc.similar.record('specificDocId').exec()
+        await unbody.get
+                    .googleDoc
+                    .similar
+                    .record('specificDocId')
+                    .exec()
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -64,13 +73,16 @@ Find Google Docs that are similar to a specific Google Doc.
 </Tabs>
 
 
-### Example 2 - Discord / Discord messages
+### Example 2 - Discord messages
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
-        await unbody.get.discordMessage.similar.record("specificMessageId").exec()
+        await unbody.get
+                    .discordMessage
+                    .similar
+                    .record("specificMessageId")
+                    .exec()
 
-        // payload is an array of DiscordMessages that are similar to the specific message with id "specificMessageId"
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -92,13 +104,13 @@ Find Google Docs that are similar to a specific Google Doc.
 
 ### Example 3 - Any text block
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
-        await unbody.get.textBlock.similar.record("specificTextBlockId").exec();
-
-        // payload is an array of textBlocks that are similar to the specific text block with id "specificTextBlockId"
-        // this search includes all types of objects available in the sources of your project
-        // so the result here can be a mixed from Google Docs, Markdown files on Google Drive and/or some Github Repos
+        await unbody.get
+                    .textBlock
+                    .similar
+                    .record("specificTextBlockId")
+                    .exec();
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -119,10 +131,9 @@ Find Google Docs that are similar to a specific Google Doc.
 </Tabs>
 
 ## Arguments
-| arguments | Type | Default | Description |  |
-| --- | --- | --- | --- | --- |
-| id | string |  | The ID of the object you want to find similar items to. |  |
-| certainty | float |  | Normalized Distance between the result item and the search vector. Normalized to be between 0 (identical vectors) and 1 (perfect opposite). |  |
-| distance | float |  | The required degree of similarity between an object's characteristics and the provided filter values
- |  |
-|   beacon | string |  | Concept identifier in the beacon format |  |
+| Name | Type | Default | Description |
+| --- | --- | --- | --- |
+| id | string |  | The ID of the object you want to find similar items to. |
+| certainty | float |  | Normalized Distance between the result item and the search vector. Normalized to be between 0 (identical vectors) and 1 (perfect opposite). |
+| distance | float |  | The required degree of similarity between an object's characteristics and the provided filter values |
+|  beacon | string |  | Concept identifier in the beacon format |
