--- a/pages/generative-api/text-gen.mdx
+++ b/pages/generative-api/text-gen.mdx
@@ -4,13 +4,13 @@ The `.generate.text()` method creates text content based on a prompt or a sequen
 
 ## Usage
 
-### Basic Prompt
+### Example 1 - Basic Prompt
 Generate text using a simple string prompt:
 ```typescript
 unbody.generate.text("Explain AI's impact on healthcare.");
 ```
 
-### Prompt with Options
+### Example 2 - Prompt with Options
 Add options to control the output:
 ```typescript
 unbody.generate.text("Write a report on climate change.", {
@@ -21,7 +21,7 @@ unbody.generate.text("Write a report on climate change.", {
 });
 ```
 
-### Message-Based Input
+### Example 3 - Message-Based Input
 Guide the generation using a series of messages:
 ```typescript
 unbody.generate.text(
