--- a/pages/content-api/search/hybrid-search.mdx
+++ b/pages/content-api/search/hybrid-search.mdx
@@ -1,7 +1,9 @@
 import {Tabs, Tab} from "@nextui-org/react";
 import {Callout} from "nextra/components";
 
-Hybrid search is a method that combines the benefits of both [semantic search](/graphql-api/search/semantic-search) and [keyword search](/graphql-api/search/keyword-search). This method provides users with comprehensive search results by considering both the meaning of the user's search query and the exact keywords used.
+# Hybrid Search
+
+Hybrid search is a method that combines the benefits of both [semantic search](/content-api/search/semantic-search) and [keyword search](/content-api/search/keyword-search). This method provides users with comprehensive search results by considering both the meaning of the user's search query and the exact keywords used.
 
 This method is best to use when you want to provide comprehensive and contextually relevant search results even when the user's search query contains both specific keywords and broader concepts.
 
@@ -10,9 +12,13 @@ This method is best to use when you want to provide comprehensive and contextual
 Hybrid search can be performed on any text (`string`) field of any object. Here's how:
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-<Tab title={"Unbody SDK"}>
+<Tab title={"SDK (.ts)"}>
     ```javascript copy
-    unbody.get.<object_name>.search.hybrid("query", {...options})
+    await unbody.get
+                .<object_name>
+                .search
+                .hybrid("query", {...options})
+                .exec()
     ```
 </Tab>
 <Tab title={"GraphQL"}>
@@ -33,18 +39,18 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
 </Tab>
 </Tabs>
 
-## Examples
+## Usage
 
-### Example 1 - Google Drive / Google Docs
+### Example 1 - Google Docs
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-<Tab title={"Unbody SDK"}>
+<Tab title={"SDK (.ts)"}>
     ```javascript copy
     const {data: {payload}} = await unbody.get
-        .googleDoc
-        .search
-        .hybrid("specific keyword and broad concept");
-    // payload is an array of GoogleDocs that match "specific keyword and broad concept" both semantically and by keyword
+                                          .googleDoc
+                                          .search
+                                          .hybrid("specific keyword and broad concept")
+                                          .exec()
     ```
 </Tab>
 <Tab title={"GraphQl"}>
@@ -67,13 +73,13 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
 
 ### Example 2 - Discord Messages
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
         const {data: {payload}} = await unbody.get
-            .discordMessage
-            .search
-            .hybrid("specific keyword and broad concept");
-        // payload is an array of DiscordMessages that match "specific keyword and broad concept" both semantically and by keyword
+                                              .discordMessage
+                                              .search
+                                              .hybrid("specific keyword and broad concept")
+                                              .exec()
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -97,12 +103,13 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
 ### Example 3 - Any text block
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
-        const {data: {payload}} = await unbody.get.textBlock.search.hybrid("specific keyword and broad concept");
-        // payload is an array of textBlocks that match "specific keyword and broad concept" both semantically and by keyword
-        // this search includes all types of objects available in the sources of your project
-        // so the result here can be a mixed from Google Docs, Markdown files on Google Drive and/or some Github Repos
+        const {data: {payload}} = await unbody.get
+                                              .textBlock
+                                              .search
+                                              .hybrid("specific keyword and broad concept")
+                                              .exec()
         ```
     </Tab>
     <Tab title={"GraphQl"}>
@@ -122,16 +129,16 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
     </Tab>
 </Tabs>
 
-### Example 4 - Google Drive / Google Docs with specific fields
+### Example 4 - Google Docs with specific fields
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
         const {data: {payload}} = await unbody.get
-            .googleDoc
-            .search
-            .hybrid("specific keyword and broad concept", ["title", "autoSummary"]);
+                                              .googleDoc
+                                              .search
+                                              .hybrid("specific keyword and broad concept", ["title", "autoSummary"])
+                                              .exec()
 
-        // payload is an array of GoogleDocs that match "specific keyword and broad concept" both semantically and by keyword - but here the search only is executed over two specific fields; "title" and "autoSummary"
         ```
     </Tab>
     <Tab title={"GraphQl"}>
@@ -155,7 +162,7 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
 
 ## Arguments
 
-| arguments | Type | Default | Description |
+| Name | Type | Default | Description |
 | --- | --- | --- | --- |
 | query | string |  | Query string |
 | alpha | float |  | Search weight |
@@ -163,25 +170,23 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
 relativeScoreFusion |  | Algorithm used for fusing results from vector and keyword search. |
 | properties | string[] |  | Specify which fields to search |
 
-
-## Advanced Hybrid Search
-
-The advanced guide for Hybrid Search is helpful for those developers who are comfortable with the basics of Hybrid Search. If you haven’t had the chance to read the basics of Hybrid search, please visit [this page](/docs/api/search/hybrid-search).
-
-## Fusion (Ranking) Method: Fine-Tune Your Results
+## Advanced Usage
+### Fusion (Ranking) Method: Fine-Tune Your Results
 
 When you're working with Hybrid Search, the way keyword and vector search results are combined can make a big difference. By default, Unbody uses `rankedFusion`, adding inverted ranks of both search methods. However, if you prefer, you can switch to `relativeScoreFusion` to add normalized scores instead. This option is especially useful when you want to prioritize the relevance of results.
 
-The sample code given below demonstrates how you can do it.
+**Example: Using Relative Score Fusion**
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
         const {data: {payload}} = await unbody.get
-            .googleDoc
-            .search
-            .hybrid("specific keyword and broad concept", {fusionType: "relativeScoreFusion"})
-            .exec();
+                                              .googleDoc
+                                              .search
+                                              .hybrid("specific keyword and broad concept", {
+                                                fusionType: "relativeScoreFusion"
+                                              })
+                                              .exec()
         ```
     </Tab>
     <Tab title={"GraphQl"}>
@@ -200,7 +205,7 @@ The sample code given below demonstrates how you can do it.
     </Tab>
 </Tabs>
 
-## Target Specific Properties: Get Precise
+### Target Specific Properties: Get Precise
 
 <Callout>
     NOTE: This feature is available from v1.19.0 onwards
@@ -208,16 +213,18 @@ The sample code given below demonstrates how you can do it.
 
 Unbody allows you to focus your search on specific fields of your data. you can target particular properties for the keyword portion of your search. Moreover, this doesn't affect the vector search, ensuring your semantic search remains broad and context-aware. Liked that? I guess, yesss!!
 
-Take a look at the example given below.
+**Example: Focus on Title**
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
         const {data: {payload}} = await unbody.get
-            .googleDoc
-            .search
-            .hybrid("specific keyword and broad concept", {properties: ["title"]})
-            .exec();
+                                              .googleDoc
+                                              .search
+                                              .hybrid("specific keyword and broad concept", {
+                                                properties: ["title"]
+                                              })
+                                              .exec()
         ```
     </Tab>
     <Tab title={"GraphQl"}>
@@ -239,20 +246,22 @@ Take a look at the example given below.
     </Tab>
 </Tabs>
 
-## Boosting Properties: Give Priority Where Needed
+### Boosting Properties: Give Priority Where Needed
 
 Isn’t it true that some things deserve more attention than others? Well, the same is true for data. Sometimes, certain parts of your data might be more important than others. With property weighting, you can tell Unbody to give more importance to specific fields during the BM25 keyword search.
 
-You can write a query as given below.
+**Example: Boosting title**
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
         const {data: {payload}} = await unbody.get
-            .googleDoc
-            .search
-            .hybrid("specific keyword and broad concept", {properties: ["title^2", "text"]})
-            .exec();
+                                              .googleDoc
+                                              .search
+                                              .hybrid("specific keyword and broad concept", {
+                                                properties: ["title^2", "text"]
+                                              })
+                                              .exec();
         ```
     </Tab>
     <Tab title={"GraphQl"}>
@@ -277,20 +286,22 @@ You can write a query as given below.
 
 In the example given above, Unbody’s Hybrid Search considers matches in the title to be twice as important as matches in the content.
 
-## Bring Your Own Vectors: Customized Semantic Search
+### Bring Your Own Vectors: Customized Semantic Search
 
 Have you got your own vector? Great! You can provide it directly to the Hybrid Search and Unbody will use it for the vector part of the search. It will still consider your query string for the keyword search. This is perfect for when you have a very specific semantic context in mind.
 
-The example given below shows you how you can form a query with your own vector.
+**Example: Search near a Vector**
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
         const {data: {payload}} = await unbody.get
-            .googleDoc
-            .search
-            .hybrid("specific keyword and broad concept", {vector: [...your_vector_here...]})
-            .exec();
+                                              .googleDoc
+                                              .search
+                                              .hybrid("specific keyword and broad concept", {
+                                                vector: [...your_vector_here...]
+                                              })
+                                              .exec();
         ```
     </Tab>
     <Tab title={"GraphQl"}>
@@ -312,21 +323,23 @@ The example given below shows you how you can form a query with your own vector.
     </Tab>
 </Tabs>
 
-## Add a Conditional Filter: Refine Your Search
+### Add a Conditional Filter: Refine Your Search
 
 You can add conditional filters to your hybrid search queries. These filters will refine the results without impacting the ranking. For example, if you want to search for articles about "coding in Python" but only if they are tagged as "tutorials", you can write the query as given below.
 
+**Example: Search when tags are equal to `tutorial`**
+
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
         const {data: {payload}} = await unbody.get
-            .googleDoc
-            .where(({Equal}) => ({
-                tags: Equal("tutorial")
-            }))
-            .search
-            .hybrid("specific keyword and broad concept")
-            .exec();
+                                              .googleDoc
+                                              .where(({Equal}) => ({
+                                                  tags: Equal("tutorial")
+                                              }))
+                                              .search
+                                              .hybrid("specific keyword and broad concept")
+                                              .exec();
         ```
     </Tab>
     <Tab title={"GraphQl"}>
