--- a/pages/content-api/search/keyword-search.mdx
+++ b/pages/content-api/search/keyword-search.mdx
@@ -1,17 +1,22 @@
 import {Tab, Tabs} from "@nextui-org/react";
 
-Keyword search is a method that allows users to search your data based on specific keywords. Unlike [semantic search]/graphql-api/semantic-search) which focuses on the meaning of the search query, keyword search relies on exact matches of the keywords used in the search query.
+# Keyword Search
+Keyword search is a method that allows users to search your data based on specific keywords. Unlike [semantic search]/content-api/semantic-search) which focuses on the meaning of the search query, keyword search relies on exact matches of the keywords used in the search query.
 
 This method is best to use when you want to provide quick and straightforward search results. It is especially effective when dealing with large databases where users are familiar with the specific keywords used within the data.
 
-### Syntax
+## Syntax
 
 Keyword search can be operated on an  any object's `string` or `string[]` field. Here's how:
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```jsx
-        unbody.get.<object_name>.search.find("query", {...options})
+        unbody.get
+              .<object_name>
+              .search
+              .find("query", {...options})
+              .exec()
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -32,18 +37,17 @@ Keyword search can be operated on an  any object's `string` or `string[]` field.
     </Tab>
 </Tabs>
 
-## Examples
+## Usage
 
-### Example 1 - Google Drive / Google Docs
+### Example 1 - Google Docs
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```jsx
         const {data: {payload}} = await unbody.get
-            .googleDoc
-            .search
-            .find("specific keyword");
-
-        // payload is an array of GoogleDocs that match "specific keyword"
+                                              .googleDoc
+                                              .search
+                                              .find("specific keyword")
+                                              .exec()
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -63,19 +67,16 @@ Keyword search can be operated on an  any object's `string` or `string[]` field.
     </Tab>
 </Tabs>
 
-### Example 3 - Any text block
+### Example 2 - Any text block
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```jsx
         const {data: {payload}} = await unbody.get
-            .textBlock
-            .search
-            .find("specific keyword");
-
-        // payload is an array of textBlocks that match "specific keyword"
-        // this search includes all types of objects available in the sources of your project
-        // so the result here can be a mixed from Google Docs, Markdown files on Google Drive and/or some Github Repos
+                                              .textBlock
+                                              .search
+                                              .find("specific keyword")
+                                              .exec()
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -95,17 +96,17 @@ Keyword search can be operated on an  any object's `string` or `string[]` field.
     </Tab>
 </Tabs>
 
-### Example 4 - Google Drive / Google Docs - specific fields
+### Example 3 - Google Docs - specific fields
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```jsx
         const {data: {payload}} = await unbody.get
-            .googleDoc
-            .search
-            .find("specific keyword", ["title", "autoSummary"]);
+                                              .googleDoc
+                                              .search
+                                              .find("specific keyword", ["title", "autoSummary"])
+                                              .exec()
 
-        // payload is an array of GoogleDocs that match "specific keyword" - but here the search only is executed over two specifiec fields; "title" and "autoSummary"
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -128,7 +129,7 @@ Keyword search can be operated on an  any object's `string` or `string[]` field.
 
 ## Arguments
 
-| arguments | Type | Default | Description |
+| Name | Type | Default | Description |
 | --- | --- | --- | --- |
 | query * | string, string[] |  |  |
 | fields | string[] |  | Specify which fields to search,  |
