--- a/pages/content-api/search/semantic-search.mdx
+++ b/pages/content-api/search/semantic-search.mdx
@@ -1,5 +1,7 @@
 import {Tabs, Tab} from "@nextui-org/react";
 
+# Semantic Search
+
 Semantic search is a method that lets users search data based on the meaning of their query. Users can use any form of natural human language and still get the same results. This differs from classic search, which relies on exact keyword matching.
 
 For instance, if you've got a collection of documents about Quentin Tarantino, Maradona, and Elon Musk, the user doesn't need to type the full term "Quentin Tarantino" to find documents about him. Instead, they can enter phrases like "a movie director" or "who made Pulp Fiction" and still reach the same results.
@@ -9,9 +11,12 @@ This method is best to use when you need to provide a more intuitive and user-fr
 You can perform semantic searches on virtually any text (`string`) field of any object. Here's how:
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
-        unbody.get.<object_name>.search.about("query", {...options})
+        unbody.get
+              .<object_name>
+              .search
+              .about("query", {...options})
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -32,17 +37,18 @@ You can perform semantic searches on virtually any text (`string`) field of any 
     </Tab>
 </Tabs>
 
-### Example 1 - Google Drive / Google Docs
+
+## Usage
+
+### Example 1 - Google Docs
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
         unbody.get
-            .googleDoc
-            .search
-            .about("a movie director")
-
-        // payload is an array of GoogleDocs that are about "a movie director"
+              .googleDoc
+              .search
+              .about("a movie director")
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -62,17 +68,15 @@ You can perform semantic searches on virtually any text (`string`) field of any 
     </Tab>
 </Tabs>
 
-### Example 2 - Discord / Discord messages
+### Example 2 - Discord messages
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
         unbody.get
-            .discordMessage
-            .search
-            .about("a movie director")
-
-        // payload is an array of DiscordMessages that are about "a movie director"
+              .discordMessage
+              .search
+              .about("a movie director")
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -95,16 +99,13 @@ You can perform semantic searches on virtually any text (`string`) field of any 
 ### Example 3 - Any text block
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
         unbody.get
-            .textBlock
-            .search
-            .about("a movie director")
+              .textBlock
+              .search
+              .about("a movie director")
 
-        // payload is an array of textBlocks that are about "a movie director"
-        // this search includes all types of objects avaiable in the sources of your project
-        // so the result here can be a mixed from Google Docs, Markdown files on Google drive and/or some Github Repos
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -124,31 +125,44 @@ You can perform semantic searches on virtually any text (`string`) field of any 
     </Tab>
 </Tabs>
 
-## Semantic Search: Advanced Guide
-This guide is designed for developers who have a good grasp of the [basics of semantic search](/graphql-api/search/semantic-search) and are ready to explore more sophisticated functionalities to enhance their search capabilities. Let’s dive in, folks!
+## Arguments
+
+| Name | Type | Default | Description |
+| --- | --- | --- | --- |
+| concepts | string[] |  | Specify what concepts to look into |
+| moveTo | object |  | Move your search closer to another vector described by keywords |
+| moveAwayFrom | object |  | Move your search further away to another vector described by keywords |
+| targets | object |  | Subsearch list |
+| targetVectors | string[] | | Target vectors |
+| distance | float | | The required degree of similarity between an object's characteristics and the provided filter values |
+| certainty | float | | Normalized distance between the result item and the search vector |
+
+## Semantic Search: Continued
+In this section we're going to explore more sophisticated functionalities to enhance the search capabilities. Let’s dive in, folks!
 
 We have already explained vector space in the previous doc. **`nearVector`** provides direct access to the vector space, allowing for precise navigation and customized search experiences. Here, we’ll explore advanced techniques and use cases to fully leverage this powerful feature.
 
+## Advanced Usage
 ### Fine-Tuning with moveTo and moveAwayFrom
 
 **`moveTo`** and **`moveAwayFrom`** are very powerful advanced functionalities that enable you to steer your search query towards or away from specific concepts. You can probably sense how powerful this concept is which gives you precise control over your search results.
 
-- **Example: Balancing Concepts**
-For example, let us consider you’re searching for articles related to web development, but you want a balanced view, considering both frontend and backend perspectives. The example given below imitates the scenario.
+**Example: Balancing Concepts**   
+For example, let's' consider you’re searching for articles related to web development, but you want a balanced view, considering both frontend and backend perspectives. The example given below imitates the scenario.
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
         await unbody.get
-            .textDocument
-            .nearText({
-                concepts: [...concepts representing “web development”...],
-                moveTo: {
-                    concepts: ["frontend", "backend"],
-                    force: 0.5
-                }
-            })
-            .exec()
+                    .textDocument
+                    .nearText({
+                        concepts: [...concepts representing “web development”...],
+                        moveTo: {
+                            concepts: ["frontend", "backend"],
+                            force: 0.5
+                        }
+                    })
+                    .exec()
         ```
     </Tab>
     <Tab title={"GraphQL formatted"}>
@@ -177,15 +191,16 @@ For example, let us consider you’re searching for articles related to web deve
 
 If you have access to custom words or document vectors, **`nearVector`** allows you to integrate them directly into your search queries.
 
+**Example: Search near a Vector**
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
         unbody.get
-            .textDocument
-            .nearVector({
-                vector: [...your custom word vector...]
-            })
-            .exec()
+              .textDocument
+              .nearVector({
+                  vector: [...your custom word vector...]
+              })
+              .exec()
         ```
     </Tab>
     <Tab title={"GraphQl formatted"}>
@@ -214,12 +229,16 @@ Let us now have a look at how you can enhance your search results by boosting ce
 
 Some of the properties in the data are more relevant than others. You can boost the relevance of specific properties in your data to ensure they have a greater impact on the search results.
 
-- **Example: Boosting Titles**
+**Example: Boosting Titles**
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```javascript copy
-        await unbody.get.textDocument.search.find("web development", ["title"]).exec()
+        await unbody.get
+                    .textDocument
+                    .search
+                    .find("web development", ["title"])
+                    .exec()
         ```
     </Tab>
     <Tab title={"GraphQl formatted"}>
@@ -245,20 +264,20 @@ Some of the properties in the data are more relevant than others. You can boost 
 
 You can also apply filters to your semantic search queries. It helps to narrow down results based on specific conditions.
 
-- **Example: Filtering by Tags**
+**Example: Filtering by Tags**
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
 
         ```javascript copy
         unbody.get
-            .article
-            .where(({Equal}) => ({
-                tags: Equal("tutorial")
-            }))
-            .search
-            .about("web development")
-            .exec()
+              .article
+              .where(({Equal}) => ({
+                  tags: Equal("tutorial")
+              }))
+              .search
+              .about("web development")
+              .exec()
         ```
     </Tab>
     <Tab title={"GraphQl formatted"}>
@@ -284,6 +303,3 @@ You can also apply filters to your semantic search queries. It helps to narrow d
         ```
     </Tab>
 </Tabs>
-
-
-
