--- a/pages/first-project.mdx
+++ b/pages/first-project.mdx
@@ -16,7 +16,7 @@ In this guide, we’ll walk you through building your first project with Unbody,
 ## Prerequisites
 
 1. An Unbody account: Sign up at [Unbody.io](https://unbody.io/).
-2. A Data source: For this guide, we’ll use a **Google Drive folder** with a few files (e.g., [Markdown](/graphql-api/data-types/textdocument), [PDFs](/graphql-api/data-types/textdocument), [images](/graphql-api/data-types/imageblock), or a short [video](/graphql-api/data-types/videofile) under 1 minute). Unbody also supports many other prebuilt integrations (like [Discord](/providers/discord) or [GitHub](/providers/github) and [custom data ingestion](/data-ingestion/push-api).
+2. A Data source: For this guide, we’ll use a **Google Drive folder** with a few files (e.g., [Markdown](/content-api/data-types/textdocument), [PDFs](/content-api/data-types/textdocument), [images](/content-api/data-types/imageblock), or a short [video](/content-api/data-types/videofile) under 1 minute). Unbody also supports many other prebuilt integrations (like [Discord](/providers/discord) or [GitHub](/providers/github) and [custom data ingestion](/data-ingestion/push-api).
 3. Freemium plan: Unbody’s free plan is great for testing but has limits on file count and size, so keep your test folder small. [Learn more about pricing](https://unbody.io/pricing).
 
 Once ready, let’s get started.
@@ -29,20 +29,20 @@ A **project** in Unbody is your workspace. It includes:
 - Configurable AI tools like [**vectorizers**](/project-configurations/vectorizers), [**enhancers**](/project-configurations/enhancers), and [**generative modules**](/project-configurations/generative-modules).
 - One or more **data sources**, defining where your data comes from.
 
-When you set up a project, you’re defining the tools and processes that transform raw data into actionable knowledge. Once the data is ingested, Unbody processes, vectorizes, and enriches it. Afterward, you can query and interact with the AI-ready data through the [**Content API**](/graphql-api/authorization).
+When you set up a project, you’re defining the tools and processes that transform raw data into actionable knowledge. Once the data is ingested, Unbody processes, vectorizes, and enriches it. Afterward, you can query and interact with the AI-ready data through the [**Content API**](/content-api/authorization).
 
 <Steps>
 ## Step 1: Create a Project and configure it
 
 Create your project and configure the AI tools it will use. Configurations include:
 
-- [**Vectorizers**](/project-configurations/vectorizers): Convert data into embeddings for tasks like [semantic search](/graphql-api/search/semantic-search).
+- [**Vectorizers**](/project-configurations/vectorizers): Convert data into embeddings for tasks like [semantic search](/content-api/search/semantic-search).
 - [**Enhancers**](/project-configurations/enhancers): Enrich data by summarizing, tagging, or extracting metadata.
 - [**Generative Modules**](/project-configurations/generative-modules): Enable AI-driven content creation.
 
-For this guide, we use a [**vectorizer**](/admin-api#textvectorizer-configuration) for processing text and two built in enhancers: [**AutoVision**](/admin-api#autovision-configuration) for enhancing images and [**AutoSummary**](/admin-api#autosummary-configuration) for [text documents](/graphql-api/data-types/textdocument).
+For this guide, we use a [**vectorizer**](/admin-api#textvectorizer-configuration) for processing text and two built in enhancers: [**AutoVision**](/admin-api#autovision-configuration) for enhancing images and [**AutoSummary**](/admin-api#autosummary-configuration) for [text documents](/content-api/data-types/textdocument).
 
-<Tabs items={['Dashboard', 'SDK']}>
+<Tabs items={['Dashboard', 'SDK (.ts)']}>
   <Tabs.Tab>
       First Log in to [Unbody](https://unbody.io/) and then click on `New Project`.
 
@@ -111,7 +111,7 @@ For this guide, we use a [**vectorizer**](/admin-api#textvectorizer-configuratio
 
 Data sources define where your project gets its data. Unbody supports both [prebuilt integrations](/providers/overview) (e.g., [Google Drive](/providers/google-drive), [Discord](/providers/discord)) and [custom data providers](/data-ingestion/push-api).
 
-<Tabs items={['Dashboard', 'SDK']}>
+<Tabs items={['Dashboard', 'SDK (.ts)']}>
   <Tabs.Tab>
     <Steps>
         ### Open your project and navigate to Data Sources.
@@ -152,22 +152,22 @@ Data sources define where your project gets its data. Unbody supports both [preb
 
 {/* At this point, unbody will ingest, process, vectorize, and enrich the data automatically. This process will take while, you can keep track of progress in the data source page under logs section.
 
-At this point you have nothing to do on dashboard and can move to next step which is about start building. The following will be provided in [SDK (typescript)](/graphql-api/authorization) and [Graphql](/graphql-api/authorization). Each project has a graphql playground where you can play around with the given queries. */}
+At this point you have nothing to do on dashboard and can move to next step which is about start building. The following will be provided in [SDK (typescript)](/content-api/authorization) and [Graphql](/content-api/authorization). Each project has a graphql playground where you can play around with the given queries. */}
 
 At this point, Unbody will ingest, process, vectorize, and enrich the data automatically. This process will take a while, and you can monitor the progress in the logs section:
 ![Processing status in logs](/images/docs/get-started/logs.png)
 {/* *Track initialization progress and processing status* */}
 
-At this point you have nothing to do on dashboard and can move to next step which is about start building. The following will be provided in [SDK (typeScript)](/graphql-api/authorization) and Graphql. Each project has a graphql playground where you can play around with the given queries. 
+At this point you have nothing to do on dashboard and can move to next step which is about start building. The following will be provided in [SDK (typeScript)](/content-api/authorization) and Graphql. Each project has a graphql playground where you can play around with the given queries. 
 ![GraphQL playground interface](/images/docs/get-started/graphql-playground.png)
 {/* *Built-in GraphQL playground for testing queries* */}
 
 ## Step 3: Interact with Your Data
-Once your data is ready, use the [**Content API**](/graphql-api/authorization) to perform tasks like  [semantic search](/graphql-api/search/semantic-search) or content generation. 
+Once your data is ready, use the [**Content API**](/content-api/authorization) to perform tasks like  [semantic search](/content-api/search/semantic-search) or content generation. 
 
-Fetch [google docs](/graphql-api/data-types/googledoc)
+Fetch [google docs](/content-api/data-types/googledoc)
 
-<Tabs items={['Typescript Client', 'Graphql']}>
+<Tabs items={['SDK (.ts)', 'Graphql']}>
   <Tabs.Tab>
     ```tsx
      const { data: {payload} } = await unbody.get
@@ -193,11 +193,11 @@ Fetch [google docs](/graphql-api/data-types/googledoc)
   </Tabs.Tab>
 </Tabs>
 
-[Semantic search](/graphql-api/search/semantic-search)
+[Semantic search](/content-api/search/semantic-search)
 
-Now lets get all [text documents](/graphql-api/data-types/textdocument) that are markdown
+Now lets get all [text documents](/content-api/data-types/textdocument) that are markdown
 
-<Tabs items={['Typescript Client', 'Graphql']}>
+<Tabs items={['SDK (.ts)', 'Graphql']}>
   <Tabs.Tab>
     ```typescript
     const { data: {payload} } = await unbody.get
@@ -229,9 +229,9 @@ Now lets get all [text documents](/graphql-api/data-types/textdocument) that are
   </Tabs.Tab>
 </Tabs>
 
-Fetch all [images](/graphql-api/data-types/imageblock)
+Fetch all [images](/content-api/data-types/imageblock)
 
-<Tabs items={['Typescript Client', 'Graphql']}>
+<Tabs items={['SDK (.ts)', 'Graphql']}>
   <Tabs.Tab>
     ```typescript
     const { data: {payload} } = await unbody.get
@@ -257,7 +257,7 @@ Fetch all [images](/graphql-api/data-types/imageblock)
 
 Semantic search on images
 
-<Tabs items={['Typescript Client', 'Graphql']}>
+<Tabs items={['SDK (.ts)', 'Graphql']}>
   <Tabs.Tab>
     ```typescript
     const { data: {payload} } = await unbody.get
@@ -287,9 +287,9 @@ Semantic search on images
   </Tabs.Tab>
 </Tabs>
 
-Simple rag on text files ([generative](/graphql-api/generative))
+Simple rag on text files ([generative](/content-api/generative))
 
-<Tabs items={['Typescript Client', 'Graphql']}>
+<Tabs items={['SDK (.ts)', 'Graphql']}>
   <Tabs.Tab>
     ```typescript
     const { data: {payload} } = await unbody.get
@@ -335,9 +335,9 @@ Simple rag on text files ([generative](/graphql-api/generative))
   </Tabs.Tab>
 </Tabs>
 
-Simple rag on images ([generative](/graphql-api/generative))
+Simple rag on images ([generative](/content-api/generative))
 
-<Tabs items={['Typescript Client', 'Graphql']}>
+<Tabs items={['SDK (.ts)', 'Graphql']}>
   <Tabs.Tab>
     ```typescript
     const { data: {payload} } = await unbody.get
@@ -407,6 +407,6 @@ Simple rag on images ([generative](/graphql-api/generative))
 
 Congratulations! Your first project is now set up. You can:
 
-- Experiment with [semantic search](/graphql-api/search/semantic-search) or [generative tasks](/graphql-api/generative).
+- Experiment with [semantic search](/content-api/search/semantic-search) or [generative tasks](/content-api/generative).
 - Add more [data providers](/providers/overview).
 - Build AI-native features and applications with your processed data.
