--- a/pages/image-api/api-reference.mdx
+++ b/pages/image-api/api-reference.mdx
@@ -6,21 +6,22 @@ Unbody’s Image API, powered by IMGIX, offers developers a seamless way to host
 
 This documentation will guide you through using the Unbody Image API, helping you to leverage IMGIX's functionality to enhance your image content.
 
-## Getting Started with Unbody Image API
+## Usage
 
-### Prerequisites
-
-Before you begin, make sure you have the following.
-
-- An active Unbody account.
-- Access to the Unbody GraphQL endpoint.
-- Familiarity with basic image processing concepts.
-
-### Fetching Your Image URL
+### Example 1 - Fetching Your Image URL
 
 Every image synced with Unbody is accessible through our GraphQL endpoint. Given below is a basic query to fetch an image URL.
 
-<Tabs items={['GraphQL', 'TypeScript']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
+<Tabs.Tab>
+```tsx
+await unbody.get
+            .imageBlock
+            .where({ path: '/your/image/path'},  )
+            .select('url', 'alt', 'width', 'height')
+            .exec()
+```
+</Tabs.Tab>
 <Tabs.Tab>
 ```graphql copy
 query {
@@ -35,16 +36,11 @@ query {
 }
 ```
 </Tabs.Tab>
-<Tabs.Tab>
-```tsx
-await unbody.get.imageBlock.where({ path: '/your/image/path'},  ).select('url', 'alt', 'width', 'height').exec()
-```
-</Tabs.Tab>
 </Tabs>
 
 With the `url` obtained, you can perform a variety of operations using IMGIX parameters directly in the URL.
 
-### Basic Image Transformation
+### Example 2 - Basic Image Transformation
 
 To apply IMGIX transformations, you can append parameters to the image URL. Given below is a simple transformation that resizes the image to a width of 300 pixels.
 
@@ -96,9 +92,3 @@ When using the Unbody Image API with IMGIX, you may consider following the best 
 Take a look at the Best Practices page given below for more details on best practices.
 
 [Best practices](/image-api/best-practices)
-
-## Conclusion
-
-The Unbody's Image API with IMGIX is a powerful tool for developers to enhance the visual component of their applications with ease. By leveraging the features and functionalities detailed above, you can ensure that your images are always optimized for performance and quality.
-
-For a deeper dive into all available IMGIX parameters and to explore more advanced features, please refer to the [official IMGIX documentation](https://docs.imgix.com/apis).
