--- a/pages/project-configurations/vectorizers.mdx
+++ b/pages/project-configurations/vectorizers.mdx
@@ -33,6 +33,22 @@ For a complete list of available vectorizers, refer to the [Vectorizers Referenc
 
 ---
 
+### Supported Embeddings and Vectorizers
+
+| Model Name          | Provider  | Context Window (Tokens) | Max Tokens | Image Input Support |
+| ------------------- | --------- | ----------------------- | ---------- | ------------------- |
+| `gpt-3.5-turbo`     | OpenAI    | 16,384                  | 4,096      |                     |
+| `gpt-4`             | OpenAI    | 8,192                   | 8,192      |                     |
+| `gpt-4-turbo`       | OpenAI    | 128,000                 | 4,096      | ✔                   |
+| `gpt-4o`            | OpenAI    | 128,000                 | 4,096      | ✔                   |
+| `gpt-4o-mini`       | OpenAI    | 128,000                 | 16,384     | ✔                   |
+| `command`           | Cohere    | 4,096                   | 4,096      |                     |
+| `command-light`     | Cohere    | 4,096                   | 4,096      |                     |
+| `command-r`         | Cohere    | 128,000                 | 4,096      |                     |
+| `command-r-plus`    | Cohere    | 128,000                 | 4,096      |                     |
+| `open-mistral-7b`   | MistralAI | 32,000                  |            |                     |
+| `open-mixtral-8x7b` | MistralAI | 32,000                  |            |                     |
+
 ### Configuring Vectorizers via Admin API
 
 To configure vectorizers for your project, use the Admin API. Follow these steps:
